--- a/manifest.yml
+++ b/manifest.yml
@@ -27,3 +27,7 @@
 #   # Require the installation of other skills before installing this skill
 #   skill:
 #     - my-other-skill
+Dependencies:
+  python:
+    - RPi.GPIO
+    - pyserial
